filter panel shift (dynamic number of visible filters) maiToolbar tooltips (dynamic access from sessions XML data) style fixing in olap.css

--- a/knowagewhatifengine/WebContent/css/olap.css
+++ b/knowagewhatifengine/WebContent/css/olap.css
@@ -72,6 +72,11 @@
     min-height:0px;
 }
 
+.main-toolbar-button{
+	min-width:0px;
+	min-height:0px;
+	height:32px;
+}
 .dimension-top-toolbar{
     border-radius: 0px 7px 7px 0px;
 }
